# loopa-sdk

./: .gitignore  README.md  pyproject.toml
apps/calculator/: app.toml  forge.toml  prompt.md
apps/calculator/versions/v0/: main.py
apps/calculator/versions/v1/: main.py  manifest.json
forge/: __init__.py  __main__.py
forge/artifact/: __init__.py  chat.py  state.py
forge/host/: atomic.py  cli.py  config.py  implementor.py  inbox.py  paths.py  probe.py  runner.py  status.py  supervisor.py
loopa/: __main__.py
loopa/artifact/: __init__.py  chat.py  state.py
loopa/host/: __init__.py  cli.py  config.py  registry.py  runner.py  supervisor.py  validator.py  versions.py
